--- a/ExpressJS-Fundamentals/ShopStop/package.json
+++ b/ExpressJS-Fundamentals/ShopStop/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "vex",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "gulp": "^4.0.0",
+    "gulp-clean-css": "4.0.0",
+    "gulp-rename": "1.4.0",
+    "multiparty": "^4.2.1",
+    "shortid": "^2.2.14"
+  }
 }
