--- a/ExpressJS-Fundamentals/ShopStop/package.json
+++ b/ExpressJS-Fundamentals/ShopStop/package.json
@@ -9,10 +9,15 @@
   "author": "vex",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-clean-css": "4.0.0",
     "gulp-rename": "1.4.0",
+    "handlebars": "^4.0.12",
     "mongoose": "^5.4.5",
+    "multer": "^1.4.1",
     "multiparty": "^4.2.1",
     "shortid": "^2.2.14"
   }
