--- a/ExpressJS-Fundamentals/ShopStop/package.json
+++ b/ExpressJS-Fundamentals/ShopStop/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "1.4.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "1.15.6",
     "gulp": "^4.0.0",
     "gulp-clean-css": "4.0.0",
     "gulp-rename": "1.4.0",
@@ -19,6 +21,9 @@
     "mongoose": "^5.4.5",
     "multer": "^1.4.1",
     "multiparty": "^4.2.1",
+    "nodemon": "^1.18.9",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
     "shortid": "^2.2.14"
   }
 }
