--- a/ExpressJS-Fundamentals/CarRentalExercise/package.json
+++ b/ExpressJS-Fundamentals/CarRentalExercise/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "3.0.0",
     "express-session": "1.15.6",
     "mongoose": "5.4.1",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.9",
     "passport": "0.4.0",
     "passport-local": "1.0.0"
