--- a/ExpressJS-Fundamentals/CarRentalExercise/package.json
+++ b/ExpressJS-Fundamentals/CarRentalExercise/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.18.3",
+    "bootstrap": "^4.2.1",
     "cookie-parser": "1.4.3",
     "express": "4.16.4",
     "express-handlebars": "3.0.0",
